--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <aside>
       <menu id="sideMenu">
         <button data-action="new-column">New</button>
-        <button>Theme</button>
+        <button data-action="empty-db">Empty</button>
         <button>Macro</button>
         <button>Equalz</button>
         <button>Offline</button>
@@ -31,29 +31,16 @@
 
   <x-modal hidden overlay esc-hide><x-placeholder></x-placeholder></x-modal>
 
-  <x-template name="task">
-    <script type="template/script">
-    </script>
-    <script type="template/content">
-      <p>{text}</p>
-      <div class="tags">{tags}</div>
-    </script>
-  </x-template>
 
-  <x-template name="task-edit">
+<!-- Templates -->
+
+  <x-template name="rsspost">
     <script type="template/script">
-      this.addTemplateListeners({
-        'tap:delegate(button.update-task)': function(e){
-          console.log('saved');
-          e.templateTarget.parseText(e.target.parentNode.firstElementChild.value);
-          e.templateTarget.setAttribute('template', 'task');
-        }
-      });
     </script>
     <script type="template/content">
-      <textarea>{text} {tags}</textarea>
-      <input type="color" name="favcolor">
-      <button class="update-task">Save</button>
+      <h3>{head}</h3>
+      <div>{text}</div>
+      <div>{date}</div>
     </script>
   </x-template>
 
@@ -61,24 +48,69 @@
     <script type="template/script">
       this.addTemplateListeners({
         'tap:delegate(button.create-column)': function(e){
-          var values = {};
-          xtag.query(e.templateTarget, 'input').forEach(function(input){
-            values[input.name] = input.value;
+          var values = { columnTitle:'', headerColor: '', feeds: []};
+          var inputs =xtag.query(e.templateTarget, 'input').forEach(function(input){
+            if (typeof values[input.name] !== undefined){
+              values[input.name] = input.value;
+            }
           });
-          createColumn(values.columnTitle, values.filter, values.headerColor);
+          xtag.query(e.templateTarget, '.selected-rss-sources option').forEach(function(option){
+            values.feeds.push(option.value);
+          });
+          console.log('DEBUG:', values);
+          Column.create(values.columnTitle, values.feeds, values.headerColor, function(results){
+              console.log(results);
+          });
+
           modal.toggle();
+        },
+        'keydown:keypass(13):delegate(input[name="rssUrl"])': function(e){
+          var url = "http://pipes.yahoo.com/pipes/pipe.run?_id=68cf7f06c7396263dc4e526f6b466a45&_render=json&rssurl=" + this.value;
+          var panel = xtag.query(this.parentNode,'.jsonp')[0];
+          panel.src = url;
+        },
+        'dataready:delegate(x-panel)': function(e){
+          var self = this;
+          var panel = xtag.query(this.parentNode,'.rss-sources')[0];
+          panel.innerHTML = '';
+          e.request.responseText.value.items.forEach(function(item){
+            var option = document.createElement('option');
+            option.value = item.link;
+            option.innerHTML = item.title;
+            panel.appendChild(option);
+          });
+        },
+        'keydown:keypass(13):delegate(select.rss-sources)': function(e){
+          var selectedList = xtag.query(this.parentNode, 'select.selected-rss-sources')[0];
+          var selectedOption = this.options[this.selectedIndex];
+          var option = document.createElement('option');
+          option.value = selectedOption.value;
+          option.innerHTML = selectedOption.innerHTML;
+          selectedList.appendChild(option);
+        },
+        'keydown:keypass(46):delegate(select.selected-rss-sources)': function(e){
+          this.removeChild(this.options[this.selectedIndex]);
         }
       });
     </script>
     <script type="template/content">
       <label for="columnTitle">Name</label>
       <input type="text" name="columnTitle" >
-      <label for="filter">Filter</label>
-      <input type="text" name="filter" >
-      <label for="filter">Color</label>
+
+      <label for="headerColor">Color</label>
       <input type="color" name="headerColor" >
+
+      <label for="rssUrl">Site Url</label>
+      <input type="text" name="rssUrl" >
+
+      <label for="available-feeds">Available Feeds</label>
+      <select name="available-feeds" class="rss-sources" multiple></select>
+
+      <label for="feeds">Selected Feeds</label>
+      <select name="feeds" class="selected-rss-sources" multiple></select>
       <br/>
       <button class="create-column">Save</button>
+      <x-panel class="jsonp" data-callback-key="_callback"></x-panel>
     </script>
   </x-template>
 
@@ -91,12 +123,12 @@
   var shiftbox = document.querySelector('x-shiftbox');
   var modal = document.querySelector('x-modal');
 
-  document.addEventListener('DOMComponentsLoaded', function(){
-    TaskFilter.myFilters(function(err, columns){
-      columns.forEach(function(data){
-        createColumn(data.name, data.filter, data.headerColor);
+  document.addEventListener('dbconnected', function(e){
+    window.dbconnection = e.server;
+    Column.myColumns(function(results){
+      results.forEach(function(item){
+          createColumn(item.name, item.feeds, item.headerColor);
       });
-      setHeader();
     });
   });
 
@@ -114,11 +146,8 @@
       shiftbox.toggle();
     },
     'tap:delegate(x-appbar > div:last-child)': function(){
-      var selected = slidebox.querySelector('x-slide[selected]').firstElementChild;
-      var t = new Task();
-      t.text = selected.filter;
-      t.setAttribute('template','task-edit');
-      selected.insertBefore(t, selected.firstElementChild);
+      modal.firstElementChild.setAttribute('template', 'new-column');
+      modal.toggle();
     },
     'tap:delegate(#sideMenu > button)': function(e){
       switch(e.target.dataset.action){
@@ -126,6 +155,20 @@
             modal.firstElementChild.setAttribute('template', 'new-column');
             modal.toggle();
           break;
+        case 'empty-db':
+          /*if (server){
+            ['column','item'].forEach(function(type){
+              server.query(type).filter().execute().done(function(results){
+                results.forEach(function(item){
+                  server
+                });
+              });
+            });
+            server
+          } else {
+
+          }
+          */
         default:
           break;
       }
@@ -146,7 +189,7 @@
   }
 
   function createColumn(name, filter, color){
-    var column = new TaskFilter();
+    var column = new Column();
     column.name = name;
     column.filter = filter;
     column.headerColor = color;
