--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
   <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
-  <script type="text/javascript" src="/js/components.js"></script>
+  <script type="text/javascript" src="js/components.js"></script>
 
-  <link rel="stylesheet" type="text/css" href="/css/components.css">
-  <link rel="stylesheet" type="text/css" href="/css/app.css">
+  <link rel="stylesheet" type="text/css" href="css/components.css">
+  <link rel="stylesheet" type="text/css" href="css/app.css">
 
 </head>
 <body>
