added x-view idea

--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,19 @@
       </menu>
     </aside>
     <section>
+
+<!-- x-view idea
+<x-view>
+  <header></header>
+  <section>Main App Content</section>
+  <footer></footer>
+</x-view>
+-->
+
       <x-appbar><div>=</div><header id="header">Web App Header</header><div>+</div></x-appbar>
       <section>Main App Content</section>
+      <footer></footer>
+
     </section>
   </x-shiftbox>
 
